# dropship-cmd

./: .gitignore  COMMANDS.md  Cargo.toml  README.md  build.rs  dropship-settings.json
.github/workflows/: manual-build.yml
src/: auth.rs  backend.rs  candidates.rs  http.rs  main.rs  models.rs  network.rs  protocol.rs  session.rs  settings.rs
